// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recruitment/create-lead/breezy-hr CreateLead when specified company does not exist should map error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get company by ID 1b111c1111ef11. Check that the company with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"breezy-hr\\",
    \\"totalRequests\\": 100,
    \\"remainingRequests\\": 99,
    \\"remainingRequestsPercentage\\": 99,
    \\"resetTimestamp\\": 1671618827
  }
}
AST Path: definitions[0].statements[1].statements[0]
Original Map Location: Line 15, column 5",
}
`;

exports[`recruitment/create-lead/breezy-hr CreateLead when specified job does exist should perform successfully 1`] = `
Ok {
  "value": Object {
    "id": "9cbbc9529cd001",
    "jobId": "f1cfc5572a5701",
    "rateLimit": Object {
      "bucket": "breezy-hr",
      "remainingRequests": 83,
      "remainingRequestsPercentage": 83,
      "resetTimestamp": 1671610826,
      "totalRequests": 100,
    },
  },
}
`;

exports[`recruitment/create-lead/breezy-hr CreateLead when specified job does not exist should map error 1`] = `
Err {
  "error": "MappedError: Expected error
Properties: {
  \\"title\\": \\"Not Found\\",
  \\"detail\\": \\"Unable to get job by ID 12345ab789d1dd. Check that the job with that ID exists.\\",
  \\"code\\": \\"NotFound\\",
  \\"rateLimit\\": {
    \\"bucket\\": \\"breezy-hr\\",
    \\"totalRequests\\": 100,
    \\"remainingRequests\\": 80,
    \\"remainingRequestsPercentage\\": 80,
    \\"resetTimestamp\\": 1671610826
  }
}
AST Path: definitions[0].statements[2].statements[0]
Original Map Location: Line 23, column 5",
}
`;
